test/configCases/validate/basic/webpack.config.js
"use strict";

/** @type {import("../../../../types").Configuration} */
module.exports = {
	validate: false,
	unknown: true,
	mode: "production",
	entry: "./test.js"
};
